--- a/dev/scss/_majors-schools.scss
+++ b/dev/scss/_majors-schools.scss
@@ -668,6 +668,9 @@ Visual or Performing Arts  --  visual-performing-arts
 			border-color: transparent;
 		}
 	}
+	.vid-wrapper {
+		margin-top: 1em;
+	}
 	
 }
 .all-majors #inner-page-content {
