added externally hosted image links

--- a/dev/partials/_careers-jumbotron.html
+++ b/dev/partials/_careers-jumbotron.html
@@ -25,9 +25,9 @@
 
 		</div>
 		<div class="col-md-4">
-			<img class="img-fluid" src="../images/career-services-500-ongold.png" alt="" />
+			<img class="img-fluid" src="https://www.admissions.purdue.edu/images/git-template-img/career-services-500-ongold.png" alt="" />
 
-			<img src="../images/Asian-female-student-in-science-lab-10.jpg" alt="" class="img-fluid">
+			<img src="https://www.admissions.purdue.edu/images/git-template-img/Asian-female-student-in-science-lab-10.jpg" alt="" class="img-fluid">
 			
 			<!-- =================================================== -->
 			<!-- Put css in individual page for this video to be     -->
