--- a/dev/partials/_img-panel.html
+++ b/dev/partials/_img-panel.html
@@ -7,7 +7,7 @@
 		<p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. </p>
 	</div>
 	<div class="panel-image" style="background: transparent url('images/Female-Latino-student-performing.jpg') center no-repeat;">
-		<img src="images/Female-Latino-student-performing.jpg" alt="">
+		<img src="https://www.admissions.purdue.edu/images/git-template-img/Female-Latino-student-performing.jpg" alt="">
 	</div>
 </div>
 </div>
