--- a/dev/partials/_sidebar.html
+++ b/dev/partials/_sidebar.html
@@ -8,7 +8,7 @@
 	  <a href="#" class="list-group-item">Sub Menu Item</a>
 	  <a href="#" class="list-group-item">Sub Menu Item</a>
 	</div>
-	<div class="sidebar-img-wrapper"><img src="../images/Students-taking-picture-with-Neil-Armstrong-statue-1.jpg" alt="" class="img-fluid" /></div>
+	<div class="sidebar-img-wrapper"><img src="https://www.admissions.purdue.edu/images/git-template-img/Students-taking-picture-with-Neil-Armstrong-statue-1.jpg" alt="" class="img-fluid" /></div>
 	<div class="text">
 		<h4>Sidebar Text Header</h4>
 		<p>Nori grape silver beet broccoli <a href="#">kombu beet greens</a> fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.</p>
@@ -38,7 +38,7 @@
 	  <a href="#" class="list-group-item">Additional Link</a>
 	  <a href="#" class="list-group-item">Additional Link</a>
 	</div>
-	<img src="../images/public-university-rank.png" alt="" class="img-fluid" />
+	<img src="https://www.admissions.purdue.edu/images/git-template-img/public-university-rank.png" alt="" class="img-fluid" />
 
 
 </div>
