--- a/dev/partials/_large-img.html
+++ b/dev/partials/_large-img.html
@@ -1,10 +1,10 @@
 <picture class="img-fluid">
 		<!-- 1140px -->
-	  <source media="(min-width: 992px)" srcset="images/Students-walking-near-Windsor-14.jpg">
+	  <source media="(min-width: 992px)" srcset="https://www.admissions.purdue.edu/images/git-template-img/Students-walking-near-Windsor-14.jpg">
 		<!-- 992px -->
-	  <source media="(min-width: 768px)" srcset="images/Students-walking-near-Windsor-14-992.jpg">
+	  <source media="(min-width: 768px)" srcset="https://www.admissions.purdue.edu/images/git-template-img/Students-walking-near-Windsor-14-992.jpg">
 	  <!-- 768px -->
-	   <source media="(min-width: 576px)" srcset="images/Students-walking-near-Windsor-14-768.jpg">
+	   <source media="(min-width: 576px)" srcset="https://www.admissions.purdue.edu/images/git-template-img/Students-walking-near-Windsor-14-768.jpg">
 	   <!-- 576px -->
-	  <img src="images/Students-walking-near-Windsor-14-576.jpg" alt="" />
+	  <img src="https://www.admissions.purdue.edu/images/git-template-img/Students-walking-near-Windsor-14-576.jpg" alt="" />
 </picture>
