changed style for side vid

--- a/dev/partials/_sidebar-vid.html
+++ b/dev/partials/_sidebar-vid.html
@@ -1,1 +1,3 @@
-<iframe class="side-video" width="350" height="198" src="https://www.youtube.com/embed/bGIFC8u09O4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<div class="sidebar-vid-container">
+	<iframe class="side-video" width="350" height="198" src="https://www.youtube.com/embed/bGIFC8u09O4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
