added style for tabs not selected

--- a/dev/partials/_figure.html
+++ b/dev/partials/_figure.html
@@ -1,4 +1,4 @@
-<figure class="center"><!-- temp style here for display -->
+<figure class="right"><!-- temp style here for display -->
 	<img style="width: 300px; height: auto;" src="https://www.admissions.purdue.edu/images/git-template-img/Purdue-Pete.jpg" alt="">
 	<figcaption>This is an image with a caption.</figcaption>
 </figure>
