--- a/dev/scss/_layout.scss
+++ b/dev/scss/_layout.scss
@@ -113,9 +113,11 @@ figure {
 	
 	&.right {
 		margin-left: 20px;
+		margin-top: .5em;
 	}
 	&.left {
 		margin-right: 20px;
+		margin-top: .5em;
 	}
 	&.center {
 		width: 100%;
