--- a/dev/scss/_buttons.scss
+++ b/dev/scss/_buttons.scss
@@ -161,7 +161,7 @@ body main, body {
 		color: #000;
 	}
 
-  button.button-gray70, select.button-gray70,
+  button.button-gray70, select.button-gray70
 .button-gray70:link, .button-gray70:visited {
     outline-color: #555960;
     background-color: #555960;
